# Performance-Center-2.0

./: .gitignore  .replit  README.md  fetched_expenses.csv  main.py  pyproject.toml  transactions.csv
app/: __init__.py  auth.py  db.py  etl.py  scheduler.py
app/templates/: base.html  dashboard.html  index.html  login.html  resources.html  settings.html  team_performance.html
app/templates/partials/: nav_links.html
app/views/: __init__.py  dashboard.py  resources.py  settings.py  team.py
scripts/: fetch_ramp_expenses.py  sample_keys.py  sample_tsheets_users.py  test.py
